--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 *.shader linguist-vendored
-*.hlsl linguist-vendored
+*.cginc linguist-vendored
